Name:                   drawille
Version:                0.1.0.2
Category:               System
Author:                 Pedro Yamada <tacla.yamada@gmail.com>
Maintainer:             Pedro Yamada <tacla.yamada@gmail.com>
License:                GPL-3
License-File:           LICENSE
Synopsis:               A port of asciimoo's drawille to haskell
Homepage:               https://github.com/yamadapc/haskell-drawille
Description:            A tiny library for drawing with braille.
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      System.Drawille
  Build-Depends:        base >=4 && <5
                      , containers >=0.5 && <0.6

Executable senoid
  Default-Language:    Haskell2010
  HS-Source-Dirs:       examples
                      , src
  Ghc-Options:          -Wall
  Main-Is:              Senoid.hs
  Build-Depends:        base >=4 && <5
                      , containers >=0.5 && <0.6
                      , AC-Angle >=1.0 && <1.1

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base >=4 && <5
                      , hspec >=1.11 && <1.12
                      , QuickCheck >=2.6 && <2.7
                      , containers >=0.5 && <0.6

Source-Repository head
  Type:                 git
  Location:             git://github.com/yamadapc/haskell-drawille
