Name:                   drawille
Version:                0.1.0.4
Category:               System
Author:                 Pedro Yamada <tacla.yamada@gmail.com>
Maintainer:             Pedro Yamada <tacla.yamada@gmail.com>
Copyright:              (c) Pedro Yamada
License:                GPL-3
License-File:           LICENSE
Synopsis:               A port of asciimoo's drawille to haskell
Homepage:               https://github.com/yamadapc/haskell-drawille
Description:            A tiny library for drawing with braille.
Cabal-Version:          >= 1.10
Build-Type:             Simple

Flag no-tests
    Description:        Don't build test suites
    Default:            False

Flag examples
    Description:        Build examples
    Default:            False

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -threaded -O3
  Exposed-Modules:      System.Drawille
  Build-Depends:        base >=4 && <5
                      , containers >=0.5 && <0.6

Executable senoid
  Default-Language:     Haskell2010
  HS-Source-Dirs:       examples
                      , src
  Ghc-Options:          -Wall -O3
  Main-Is:              Senoid.hs
  Build-Depends:        base >=4 && <5
                      , containers >=0.5 && <0.6
                      , AC-Angle >=1.0 && <1.1
  if !flag(examples)
    Buildable: False

Executable image2term
  Default-Language:     Haskell2010
  HS-Source-Dirs:       examples
                      , src
  Ghc-Options:          -Wall -threaded -O3
  Main-Is:              Image2Term.hs
  Build-Depends:        base >=4 && <5
                      , containers >=0.5 && <0.6
                      , friday >=0.1 && <0.2
                      , terminal-size >=0.2 && <1
                      , vector
  if !flag(examples)
    Buildable: False

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base >=4 && <5
                      , hspec >=1.11 && <1.12
                      , QuickCheck >=2.6 && <2.7
                      , containers >=0.5 && <0.6
  if flag(no-tests)
    Buildable: False

Source-Repository head
  Type:                 git
  Location:             git://github.com/yamadapc/haskell-drawille
